# essentia

./: .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  COPYING.txt  COPYRIGHT  Changelog  Essentia Licensing.txt  FAQ.html  FAQ.md  FFMPEG_5_COMPATIBILITY_LOG.md  INSTALL_windows.md  MANIFEST.in  README.md  SConstruct  SConstruct_config  SConstruct_environment  VERSION  algos_end.txt  algos_start.txt  build_android.sh  build_debian.sh  cibuildwheel-tensorflow.toml  cibuildwheel.toml  compile.sh  essentia.pc  essentia.pc.in  essentia.vcproj  essentiaBindingsVC80.vcproj  essentiaVC80.vcproj  helloworld.py  helloworld.sh  install_dependencies_debian.sh  pyproject-tensorflow.toml  pyproject.toml  scons_rebuild.sh  setup.py  waf  waf.sh  (+1 more)
debian/: build.sh  changelog  control  copyright  essentia-doc.docs  essentia-extractors.install  libessentia-dev.dirs  libessentia-dev.install  libessentia-doc.dirs  libessentia-doc.install  libessentia-python.dirs  python-essentia.install  rules
doc/: Doxyfile  SConscript  build_sphinx_doc.sh  descriptors.yaml  essentia_tonal_extractor.graphml  essentia_tonal_extractor_modes.graphml  mfcc_extractor.graphml
packaging/: SConscript  build_3rdparty_android.sh  build_3rdparty_msvc_win32.sh  build_3rdparty_static_debian.sh  build_3rdparty_static_win32.sh  build_config.sh  build_config_android.sh  make_debian_package.sh
scons/: algorithms_info.py  utils.py  vsprojscons.py  vsprojsync.py
src/: SConscript  wscript
test/: SConscript
travis/: Dockerfile  build_tools.sh  build_wheels.sh  build_wheels_test.sh  clean_containers.sh  (+4 more)
(+2572 files in other folders)
