[build-system]
requires = [
    "wheel >= 0.29.0",
    "setuptools >= 48",
    "numpy>=2.0.0rc1",
    "six",
]
build-backend = "setuptools.build_meta"

[project]
name = "essentia"
license = "AGPL-3.0-only"
dynamic = ["version", "description", "readme", "authors", "keywords", "classifiers", "urls"]
dependencies = [
    "numpy>=1.25",
    "pyyaml",
    "six",
]
